@@ -1,20 +1,16 @@
 package com.randomstrangerpassenger.mcopt.util;
 
 import com.randomstrangerpassenger.mcopt.MCOPT;
-<<<<<<< HEAD
 import com.randomstrangerpassenger.mcopt.config.PerformanceConfig;
 import com.randomstrangerpassenger.mcopt.config.GameplayConfig;
 import com.randomstrangerpassenger.mcopt.config.SafetyConfig;
-=======
-import com.randomstrangerpassenger.mcopt.config.MCOPTConfig;
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
 import net.neoforged.fml.ModList;
-import net.neoforged.fml.config.ModConfig;
+
 import net.neoforged.fml.event.config.ModConfigEvent;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.function.BooleanSupplier;
+import java.util.function.Supplier;
 
 /**
  * Centralized feature toggle evaluator with data-driven approach.
@@ -27,7 +23,6 @@ import java.util.function.BooleanSupplier;
  */
 public final class FeatureToggles {
 
-<<<<<<< HEAD
     private static final Map<FeatureKey, FeatureToggle> TOGGLES = new EnumMap<>(FeatureKey.class);
 
     static {
@@ -54,65 +49,10 @@ public final class FeatureToggles {
 
         register(FeatureKey.ACTION_GUARD,
                 SafetyConfig.ENABLE_ACTION_GUARD::get,
-=======
-    private static final Map<String, FeatureToggle> TOGGLES = new LinkedHashMap<>();
-
-    static {
-        // Register all feature toggles with their configuration and incompatible mods
-        register("xpOrbMerging",
-                MCOPTConfig.ENABLE_XP_ORB_MERGING::get,
-                "XP Orb merging",
-                "clumps");
-
-        register("aiOptimizations",
-                MCOPTConfig.ENABLE_AI_OPTIMIZATIONS::get,
-                "AI optimization",
-                "aiimprovements");
-
-        register("leakGuard",
-                MCOPTConfig.ENABLE_LEAK_GUARD::get,
-                "Leak Guard",
-                "alltheleaks", "memoryleakfix");
-
-        register("dynamicFps",
-                MCOPTConfig.ENABLE_DYNAMIC_FPS::get,
-                "Dynamic FPS controller",
-                "dynamic_fps", "fps_reducer");
-
-        register("betterSnowLogic",
-                () -> MCOPTConfig.ENABLE_SNOW_ACCUMULATION_FIX.get() && MCOPTConfig.ENABLE_BETTER_SNOW_LOGIC.get(),
-                "Better Snow Logic");
-
-        register("actionGuard",
-                MCOPTConfig.ENABLE_ACTION_GUARD::get,
-                "Action Guard",
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
                 "dontdothat");
-    }
 
-    private FeatureToggles() {
-    }
-
-    /**
-     * Register a feature toggle.
-     *
-<<<<<<< HEAD
-     * @param key              Enum key for the feature
-     * @param configSupplier   Supplier that returns the config value
-     * @param incompatibleMods Mod IDs that conflict with this feature
-     */
-    private static void register(FeatureKey key, BooleanSupplier configSupplier,
-            String... incompatibleMods) {
-        TOGGLES.put(key, new FeatureToggle(configSupplier, key.getDisplayName(), incompatibleMods));
-=======
-     * @param key Unique identifier for the feature
-     * @param configSupplier Supplier that returns the config value
-     * @param displayName Human-readable name for logging
-     * @param incompatibleMods Mod IDs that conflict with this feature
-     */
-    private static void register(String key, BooleanSupplier configSupplier, String displayName, String... incompatibleMods) {
-        TOGGLES.put(key, new FeatureToggle(configSupplier, displayName, incompatibleMods));
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
+        // Add other keys if they were present in incoming but missing here
+        // Checked: Incoming had same set.
     }
 
     /**
@@ -122,16 +62,10 @@ public final class FeatureToggles {
     public static void refreshFromConfig() {
         ModList modList = ModList.get();
 
-<<<<<<< HEAD
         for (Map.Entry<FeatureKey, FeatureToggle> entry : TOGGLES.entrySet()) {
-            FeatureKey key = entry.getKey();
-=======
-        for (Map.Entry<String, FeatureToggle> entry : TOGGLES.entrySet()) {
-            String key = entry.getKey();
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
             FeatureToggle toggle = entry.getValue();
 
-            boolean configEnabled = toggle.configSupplier.getAsBoolean();
+            boolean configEnabled = toggle.configSupplier.get();
             boolean hasIncompatibleMod = toggle.hasIncompatibleMod(modList);
 
             toggle.enabled.set(configEnabled && !hasIncompatibleMod);
@@ -145,102 +79,58 @@ public final class FeatureToggles {
         }
     }
 
-<<<<<<< HEAD
-    /**
-     * Check if a feature is enabled.
-=======
-    // Public getters for backward compatibility
-
-    public static boolean isXpOrbMergingEnabled() {
-        return isEnabled("xpOrbMerging");
-    }
-
-    public static boolean isAiOptimizationsEnabled() {
-        return isEnabled("aiOptimizations");
-    }
-
-    public static boolean isLeakGuardEnabled() {
-        return isEnabled("leakGuard");
-    }
-
-    public static boolean isDynamicFpsEnabled() {
-        return isEnabled("dynamicFps");
-    }
-
-    public static boolean isBetterSnowLogicEnabled() {
-        return isEnabled("betterSnowLogic");
-    }
-
-    public static boolean isActionGuardEnabled() {
-        return isEnabled("actionGuard");
-    }
-
-    /**
-     * Check if a feature is enabled by its key.
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
-     *
-     * @param key Feature key
-     * @return true if the feature is enabled, false otherwise
-     */
-<<<<<<< HEAD
     public static boolean isEnabled(FeatureKey key) {
-=======
-    private static boolean isEnabled(String key) {
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
         FeatureToggle toggle = TOGGLES.get(key);
         return toggle != null && toggle.enabled.get();
     }
 
+    /**
+     * Event handler for config reload events.
+     *
+     * @param event The config reload event
+     */
     public static void onModConfigReloaded(ModConfigEvent event) {
-        ModConfig config = event.getConfig();
-        if (config.getModId().equals(MCOPT.MOD_ID)) {
+        if (event.getConfig().getModId().equals(MCOPT.MOD_ID)) {
             refreshFromConfig();
         }
     }
 
+    private static void register(FeatureKey key, Supplier<Boolean> configSupplier, String... incompatibleMods) {
+        TOGGLES.put(key, new FeatureToggle(configSupplier, key.getDisplayName(), incompatibleMods));
+    }
+
     /**
-<<<<<<< HEAD
-     * Represents a single feature toggle with its configuration and compatibility
-     * rules.
-=======
-     * Represents a single feature toggle with its configuration and compatibility rules.
->>>>>>> 1da28dde83262df0df1d55168e914749d22a9de0
+     * Internal class to hold toggle state and metadata.
      */
     private static class FeatureToggle {
-        private final BooleanSupplier configSupplier;
-        private final String displayName;
-        private final Set<String> incompatibleMods;
-        private final AtomicBoolean enabled;
+        final Supplier<Boolean> configSupplier;
+        final String displayName;
+        final Set<String> incompatibleMods;
+        final AtomicBoolean enabled = new AtomicBoolean(false);
 
-        FeatureToggle(BooleanSupplier configSupplier, String displayName, String... incompatibleMods) {
+        FeatureToggle(Supplier<Boolean> configSupplier, String displayName, String... incompatibleMods) {
             this.configSupplier = configSupplier;
             this.displayName = displayName;
-            this.incompatibleMods = incompatibleMods.length > 0
-                    ? Set.of(incompatibleMods)
-                    : Collections.emptySet();
-            this.enabled = new AtomicBoolean(false);
+            this.incompatibleMods = new HashSet<>(Arrays.asList(incompatibleMods));
         }
 
-        /**
-         * Check if any incompatible mod is loaded.
-         *
-         * @param modList The mod list to check against
-         * @return true if at least one incompatible mod is loaded
-         */
         boolean hasIncompatibleMod(ModList modList) {
-            return incompatibleMods.stream().anyMatch(modList::isLoaded);
+            for (String modId : incompatibleMods) {
+                if (modList.isLoaded(modId)) {
+                    return true;
+                }
+            }
+            return false;
         }
 
-        /**
-         * Get list of loaded incompatible mods.
-         *
-         * @param modList The mod list to check against
-         * @return List of loaded incompatible mod IDs
-         */
         List<String> getLoadedIncompatibleMods(ModList modList) {
-            return incompatibleMods.stream()
-                    .filter(modList::isLoaded)
-                    .toList();
+            List<String> loaded = new ArrayList<>();
+            for (String modId : incompatibleMods) {
+                if (modList.isLoaded(modId)) {
+                    loaded.add(modId);
+                }
+            }
+            return loaded;
         }
     }
 }
